--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
@@ -6,6 +6,8 @@
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -38,5 +40,10 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <ImageView fitHeight="35.0" fitWidth="41.0" layoutX="208.0" layoutY="144.0" onMouseClicked="#btn_eyeIcon" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/eye.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
