--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
@@ -33,7 +33,7 @@
                 </ImageView>
                 <Label fx:id="wrongPassword" layoutX="40.0" layoutY="264.0" textFill="RED" />
             <JFXPasswordField fx:id="password_box" layoutX="40.0" layoutY="225.0" onAction="#btn_login" prefHeight="25.0" prefWidth="191.0" promptText="Password" />
-            <JFXButton layoutX="257.0" layoutY="225.0" onAction="#btn_login" style="-fx-background-color: orange;" text="Login">
+            <JFXButton fx:id="btn_login" layoutX="257.0" layoutY="225.0" onAction="#btn_login" style="-fx-background-color: orange;" text="Login">
                <font>
                   <Font size="13.0" />
                </font>
