--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
@@ -40,9 +40,14 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <ImageView fitHeight="35.0" fitWidth="41.0" layoutX="208.0" layoutY="144.0" onMouseClicked="#btn_eyeIcon" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="20.0" fitWidth="27.0" layoutX="208.0" layoutY="152.0" onMouseClicked="#btn_eyeIcon" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/eye.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="27.0" layoutX="240.0" layoutY="152.0" onMouseClicked="#btn_copyPasswordToClipboard" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/copy_icon.png" />
          </image>
       </ImageView>
    </children>
