--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane fx:id="mainAnchorPane" prefHeight="625.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.MainInterfaceController">
    <children>
@@ -122,6 +123,30 @@
       </AnchorPane>
       <AnchorPane fx:id="pane_settings" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
          <children>
+            <TextFlow prefHeight="55.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0">
+               <children>
+                  <JFXTextField editable="false" text="Anzahl BackEntries:">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField fx:id="textField_backupEntries" alignment="CENTER" editable="false">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField promptText="Anzahl ändern...">
+                     <font>
+                        <Font name="System Italic" size="14.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXButton ripplerFill="#276fc6" text="OK" textAlignment="CENTER">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </TextFlow>
             <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Settings">
                <font>
                   <Font size="64.0" />
@@ -129,6 +154,7 @@
             </TextField>
             <JFXToggleButton layoutX="42.0" layoutY="37.0" text="Autosave" unToggleColor="WHITE" />
             <JFXToggleButton layoutX="42.0" layoutY="111.0" text="was auch immer" unToggleColor="WHITE" />
+            <AnchorPane />
          </children>
       </AnchorPane>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="900.0">
